--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,70 @@
 [project]
 name = "easyplantfieldid"
 version = "0.1.0"
-description = "Add your description here"
+description = "GIS preprocessing and seedling detection GUI application"
 readme = "README.md"
 requires-python = ">=3.12"
+
+# Core dependencies
 dependencies = [
-    "geopandas>=1.1.1",
-    "loguru>=0.7.3",
-    "pyqtgraph>=0.13.7",
+    # GUI
     "pyside6>=6.10.0",
+    "pyqtgraph>=0.13.7",
+    
+    # GIS data processing
+    "geopandas>=1.1.1",
     "rasterio>=1.4.3",
-    "ultralytics>=8.3.203",
+    "shapely>=2.0.0",
+    
+    # Scientific computing
+    "numpy>=2.0.0",
+    "scipy>=1.14.0",
+    "scikit-learn>=1.5.0",
+    "scikit-image>=0.24.0",
+    
+    # Utilities
+    "loguru>=0.7.3",
+    "tqdm>=4.66.0",
 ]
 
 [dependency-groups]
+# SAM3 dependencies (source code in lib/sam3/)
+sam3 = [
+    "torch>=2.7.0",
+    "torchvision>=0.22.0",
+    "timm>=1.0.17",
+    "ftfy>=6.1.1",
+    "regex",
+    "iopath>=0.1.10",
+    "opencv-python>=4.10.0",
+]
+
+# YOLO training dependencies
+yolo = [
+    "ultralytics>=8.3.203",
+]
+
+# Development dependencies
 dev = [
     "pytest>=8.4.2",
     "pytest-qt>=4.5.0",
+    "black>=24.0.0",
+    "ruff>=0.8.0",
 ]
+
+[tool.ruff]
+line-length = 88
+target-version = "py312"
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "W"]
+ignore = ["E501"]
+
+[tool.black]
+line-length = 88
+target-version = ["py312"]
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py"]
+python_functions = ["test_*"]
