--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,24 +26,12 @@ dependencies = [
     # Utilities
     "loguru>=0.7.3",
     "tqdm>=4.66.0",
+
+    # deep learning
+    "ultralytics>=8.3.237",
 ]
 
 [dependency-groups]
-# SAM3 dependencies (source code in lib/sam3/)
-sam3 = [
-    "torch>=2.7.0",
-    "torchvision>=0.22.0",
-    "timm>=1.0.17",
-    "ftfy>=6.1.1",
-    "regex",
-    "iopath>=0.1.10",
-    "opencv-python>=4.10.0",
-]
-
-# YOLO training dependencies
-yolo = [
-    "ultralytics>=8.3.203",
-]
 
 # Development dependencies
 dev = [
