--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     # GUI
     "pyside6>=6.10.0",
     "pyqtgraph>=0.13.7",
+    "PySide6-Fluent-Widgets>=1.7.0",
     
     # GIS data processing
     "geopandas>=1.1.1",
