--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,24 +11,21 @@ dependencies = [
     "pyside6>=6.10.0",
     "pyqtgraph>=0.13.7",
     "PySide6-Fluent-Widgets>=1.7.0",
-    
     # GIS data processing
     "geopandas>=1.1.1",
     "rasterio>=1.4.3",
     "shapely>=2.0.0",
-    
     # Scientific computing
     "numpy>=2.0.0",
     "scipy>=1.14.0",
     "scikit-learn>=1.5.0",
     "scikit-image>=0.24.0",
-    
     # Utilities
     "loguru>=0.7.3",
     "tqdm>=4.66.0",
-
     # deep learning
     "ultralytics>=8.3.237",
+    "easyidp",
 ]
 
 [dependency-groups]
@@ -57,3 +54,6 @@ target-version = ["py312"]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
+
+[tool.uv.sources]
+easyidp = { path = "../EasyIDP", editable = true }
