--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,11 +16,13 @@ dependencies = [
     "shapely>=2.0.0",
     # Scientific computing
     "numpy>=2.0.0",
+    "pandas>=2.2.0",
     "scipy>=1.14.0",
     "scikit-learn>=1.5.0",
     "scikit-image>=0.24.0",
     # Utilities
     "loguru>=0.7.3",
+    "pyshp>=2.3.1",
     "tqdm>=4.66.0",
     # deep learning
     "ultralytics>=8.3.237",
