--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,21 @@ dev = [
     "ruff>=0.8.0",
 ]
 
+# Deep learning ultralytics optional dependencies
+dl = [
+    "annotated-doc>=0.0.4",
+    "anyio>=4.12.1",
+    "h11>=0.16.0",
+    "hf-xet>=1.2.0",
+    "httpcore>=1.0.9",
+    "httpx>=0.28.1",
+    "huggingface-hub>=1.4.1",
+    "safetensors>=0.7.0",
+    "shellingham>=1.5.4",
+    "timm>=1.0.24",
+    "typer-slim>=0.21.2",
+]
+
 [tool.ruff]
 line-length = 88
 target-version = "py312"
