--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "pyqtgraph>=0.13.7",
     "PySide6-Fluent-Widgets>=1.7.0",
     # GIS data processing
+    "geopandas>=1.1.1",
     "rasterio>=1.4.3",
     "shapely>=2.0.0",
     # Scientific computing
@@ -26,7 +27,6 @@ dependencies = [
     "tqdm>=4.66.0",
     # deep learning
     "ultralytics>=8.3.237",
-    "easyidp",
 ]
 
 [dependency-groups]
@@ -70,6 +70,3 @@ target-version = ["py312"]
 testpaths = ["tests"]
 python_files = ["test_*.py"]
 python_functions = ["test_*"]
-
-[tool.uv.sources]
-easyidp = { path = "../EasyIDP", editable = true }
